--- a/examples-2/portal-news-deployment.yml
+++ b/examples-2/portal-news-deployment.yml
@@ -17,6 +17,13 @@ spec:
           envFrom:
             - configMapRef:
                 name: portal-config-map
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 30
+            periodSeconds: 30 
+            failureThreshold: 3
   selector:
     matchLabels:
       app: portal-news
