--- a/examples-2/system-news-stateful-set.yaml
+++ b/examples-2/system-news-stateful-set.yaml
@@ -26,6 +26,13 @@ spec:
           mountPath: /var/www/html/uploads
         - name: sessao
           mountPath: tmp/
+        livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 30
+            periodSeconds: 30 
+            failureThreshold: 3
       volumes:
         - name: imagens
           persistentVolumeClaim:
