--- a/examples-2/system-news-stateful-set.yaml
+++ b/examples-2/system-news-stateful-set.yaml
@@ -33,6 +33,13 @@ spec:
             initialDelaySeconds: 30
             periodSeconds: 30 
             failureThreshold: 3
+        rednessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 30
+            periodSeconds: 30 
+            failureThreshold: 3
       volumes:
         - name: imagens
           persistentVolumeClaim:
